--- a/site-impl/impl/pom.xml
+++ b/site-impl/impl/pom.xml
@@ -57,6 +57,11 @@
     </dependency>
     <dependency>
       <groupId>org.sakaiproject</groupId>
+      <artifactId>sakai-component</artifactId>
+      <version>${sakai.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.sakaiproject</groupId>
       <artifactId>sakai-memory-api</artifactId>
       <version>${sakai.version}</version>
     </dependency>
