WL-550 Fix for removeSite API change. Add support for setting softly deleted flag through Sites tool.

--- a/site-tool/tool/src/bundle/admin.properties
+++ b/site-tool/tool/src/bundle/admin.properties
@@ -34,6 +34,7 @@ sitact.savas     = Save As
 sitact.thesit    = The Site's Page and Tool IDs have been re-generated.
 sitact.thesitid  = The site id is already in use
 sitact.thesitid2 = The site id is invalid
+sitact.notfound  = The site id "{0}" cannot be found.
 sitact.youdonot2 = You do not have permission to create this Site
 sitact.youdonot3 = You do not have permission to remove Site
 sitact.sperol	= Please specify a qualifed joiner's role.
@@ -52,6 +53,7 @@ sitedi.conedi        = Continue Editing
 sitedi.cre           = Created:
 sitedi.creby         = Created by:
 sitedi.des           = Description:
+sitedi.deleted       = Softly Deleted:
 sitedi.edisit        = Edit: Site
 sitedi.joi           = Joinable?:
 sitedi.joirol        = Role to assign to joiners:
