WL-550 Display deleted date. Don't rely on removeSite API change.

--- a/site-tool/tool/src/bundle/admin.properties
+++ b/site-tool/tool/src/bundle/admin.properties
@@ -54,6 +54,7 @@ sitedi.cre           = Created:
 sitedi.creby         = Created by:
 sitedi.des           = Description:
 sitedi.deleted       = Softly Deleted:
+sitedi.deletedon     = Softly Deleted on:
 sitedi.edisit        = Edit: Site
 sitedi.joi           = Joinable?:
 sitedi.joirol        = Role to assign to joiners:
